--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/kygm/WebApp#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
     "nodemon": "^2.0.7"
   }
