--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
+    "mongoose": "^5.11.14",
     "nodemon": "^2.0.7"
   }
 }
