--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
     "mongoose": "^5.11.14",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "url": "^0.11.0"
   }
 }
